--- a/mysql-node/Dockerfile
+++ b/mysql-node/Dockerfile
@@ -3,29 +3,14 @@
 #
 FROM node:9-alpine AS builder
 
-# Define working directory and copy source
-WORKDIR /home/node/app
-COPY . .
-# Install dependencies and build whatever you have to build
-# (babel, grunt, webpack, etc.)
-RUN npm install && npm run build
+ADD package.json /tmp/package.json
+RUN cd /tmp && npm install
+RUN mkdir -p /usr && cp -a /tmp/node_modules /usr
 
-###############################################################################
-# Step 2 : Run image
-#
-FROM node:9-alpine
-ENV NODE_ENV=production
-WORKDIR /home/node/app
+# add project files
+WORKDIR /usr
+ADD . /usr
 
-# Install deps for production only
-COPY ./package* ./
-RUN npm install && \
-    npm cache clean --force
-# Copy builded source from the upper builder stage
-COPY --from=builder /home/node/app/build ./build
-
-# Expose ports (for orchestrators and dynamic reverse proxies)
 EXPOSE 3000
 
-# Start the app
-CMD npm start
+CMD ["nodemon", "-L", "server.js"]
