--- a/mysql-node/package.json
+++ b/mysql-node/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "convict": "^4.3.2",
+        "dotenv": "^6.0.0",
         "express": "^4.16.3",
         "mysql": "^2.16.0",
         "redis": "^2.8.0"
