docker-mysql-node project

--- a/mysql-node/docker-compose.yml
+++ b/mysql-node/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - "3308:3306"
     volumes:
       - "./my.cnf:/etc/ysql/conf.d/config-file.cnf"
-      # - "./data:/var/lib/mysql:rw"
+      - "./data:/var/lib/mysql:rw"
 
   admin:
     image: adminer
